--- a/lectures/ls-alggroups.html
+++ b/lectures/ls-alggroups.html
@@ -69,12 +69,12 @@
 				<p>Tuesday (Weeks: 4-12)<b>13:20 - 14:55</b> in room <b>2-B505</b><br/>
 				Wednesday (Weeks: 4-12)<b>13:20 - 14:55</b> in room <b>丹枫园C425</b></p>
 				<p></p>
-				<p class="card-text"><b>Office hours:</b> <br/>
-				Wednesday <b>9:00 - 12:00</b> in room <b>理学楼406-3</b><br/>
+				<h4>Office hours:</h4>
+				<p>Wednesday <b>9:00 - 12:00</b> in room <b>理学楼406-3</b><br/>
 				or by appointment (email: <b>micha.ehrig@outlook.com</b> or <b>6120190037@bit.edu.cn</b>)</p>
 				<p></p>
-				<p class="card-text"><b>Examination:</b> <br/>
-				The final mark for the lecture will be comprised of the following parts:
+				<h4>Examination:</h4>
+				<p>The final mark for the lecture will be comprised of the following parts:
 				<ul>
 					<li>Written report on <b>one</b> exercise from the exercise sheet from Chapter 1: Commutative algebra,  <b>Deadline: week 7</b></li>
 					<li>Written report on <b>one</b> exercise from the exercise sheet from Chapter 2: Algebraic sets,  <b>Deadline: week 9</b></li>
@@ -83,7 +83,8 @@
 					<li>Written exam in week 13 after the end of the course</li>
 				</ul>
 				Each exercise report will make up 15% of the final score, while the exam in week 9 will make up 40% of the score. The exercise reports can be handed in on paper or via email.</p>
-				<p></p>				
+				<p></p>	
+				<h4>Outline of the course:</h4>			
 				<p class="card-text">The goal of this course is to understand the basic concepts of affine algebraic geometry and affine algebraic groups. This includes theorems like Hilbert's Nullstellensatz, Noether Normalisation and the Linearisation of affine algebraic groups. The outline of the course will be roughly as follows below. At the end of each chapter outline there is a list of fundamental mathematical terms and objects that will be used in that part and with whose definitions you should be familiar to understand the content of the lectures. In addition there is a pdf-file exercise sheet for each of the first four chapter.</p>
 				<p class="card-text"><b>Chapter 1: Commutative algebra</b><br/>
 				In this section we discuss the basics in the theory of commutative algebras over an arbitrary base field. The main focus here are a number of very famous theorems from the late 19th and early 20th century, namely Noether's Normalisation theorem and Hilbert's Nullstellensatz and the Basis theorem.<br/>
