--- a/lectures/ls-alggroups.html
+++ b/lectures/ls-alggroups.html
@@ -66,11 +66,11 @@
 			<div class="card-header"><h3>Graduate course: Algebraic geometry and algebraic groups</h3></div>
   			<div class="card-body">
 				<h4>Time and place:</h4>
-				<p>Tuesday (Weeks: 4-12)<b>13:20 - 14:55</b> in room <b>2-B505</b><br/>
-				Wednesday (Weeks: 4-12)<b>13:20 - 14:55</b> in room <b>丹枫园C425</b></p>
+				<p>Tuesday (Weeks: 4-12) <b>13:20 - 14:55</b> in room <b>2-B505</b><br/>
+				Wednesday (Weeks: 4-12) <b>13:20 - 14:55</b> in room <b>丹枫园C 425</b></p>
 				<p></p>
 				<h4>Office hours:</h4>
-				<p>Wednesday <b>9:00 - 12:00</b> in room <b>理学楼406-3</b><br/>
+				<p>Wednesday <b>9:00 - 12:00</b> in room <b>理学楼A 406-3</b><br/>
 				or by appointment (email: <b>micha.ehrig@outlook.com</b> or <b>6120190037@bit.edu.cn</b>)</p>
 				<p></p>
 				<h4>Examination:</h4>
@@ -104,6 +104,14 @@
 				<b>Exercises:</b> <i>coming later</i></p>
 				<p class="card-text"><b>Chapter 5: Outlook</b><br/>
 				Depending on the progress of the course, this content will be decided on later. There will be no exercises related to this chapter and the content will not be relevant for the examination.<br/>
+				<h4>References:</h4>
+				<p class="card-text">The course will not specifically follow any one reference, but below are a list of possible references that cover the topic or at least parts of it in a similar fashion.<br/>
+				<b>Algebraic geometry and algebraic groups</b>
+				<ul>
+					<li><i>Borel, Armand</i>: Linear algebraic groups. Second edition. Graduate Texts in Mathematics, 126. Springer-Verlag, New York, 1991.</li>
+					<li><i>Humphreys, James E</i>: Linear algebraic groups. Graduate Texts in Mathematics, No. 21. Springer-Verlag, New York-Heidelberg, 1975.</li>
+				</ul>
+				</p>
   			</div>
 		</div>
 	</div>
