--- a/lectures/ls-alggroups.html
+++ b/lectures/ls-alggroups.html
@@ -105,11 +105,17 @@
 				<p class="card-text"><b>Chapter 5: Outlook</b><br/>
 				Depending on the progress of the course, this content will be decided on later. There will be no exercises related to this chapter and the content will not be relevant for the examination.<br/>
 				<h4>References:</h4>
-				<p class="card-text">The course will not specifically follow any one reference, but below are a list of possible references that cover the topic or at least parts of it in a similar fashion.<br/>
+				<p class="card-text">The course will not specifically follow any one reference, but below are a list of possible references that cover the topic or at least parts of it in a similar fashion. All of them cover a large part of topics that we will not cover in the course as well.<br/>
+				<b>Commutative algebra</b>
+				<ul>
+					<li><i>Atiyah, M. F., Macdonald, I. G.</i>: Introduction to Commutative Algebra, Reading, Mass. Addison Wesley 1969</li>
+					<li><i>Eisenbud, D.</i>: Commutative Algebra with a view towards Algebraic
+Geometry, Springer Verlag, Graduate Texts in Mathematics, No. 150, New York 1995</li>
+				</ul>
 				<b>Algebraic geometry and algebraic groups</b>
 				<ul>
-					<li><i>Borel, Armand</i>: Linear algebraic groups. Second edition. Graduate Texts in Mathematics, 126. Springer-Verlag, New York, 1991.</li>
-					<li><i>Humphreys, James E</i>: Linear algebraic groups. Graduate Texts in Mathematics, No. 21. Springer-Verlag, New York-Heidelberg, 1975.</li>
+					<li><i>Borel, A.</i>: Linear algebraic groups. Second edition. Graduate Texts in Mathematics, No. 126. Springer-Verlag, New York, 1991.</li>
+					<li><i>Humphreys, J. E.</i>: Linear algebraic groups. Graduate Texts in Mathematics, No. 21. Springer-Verlag, New York-Heidelberg, 1975.</li>
 				</ul>
 				</p>
   			</div>
