--- a/publications.html
+++ b/publications.html
@@ -67,6 +67,7 @@
   			<div class="card-body">
 				<ol>
 					<li><i>Algebraic properties of zig-zag algebras</i>, with <b>D. Tubbenhauer</b>,<br> 
+						<i>to appear in Communications in Algebra</i> <br>
 						(<a href="https://arxiv.org/abs/1807.11173">ArXiv version</a>, <a href="./pdfs/zigzag.pdf">Local version</a>)</li>
 					<li><i>Relative cellular algebras</i>, with <b>D. Tubbenhauer</b>,<br>
 						<i>to appear in Transformation groups</i> <br>
