--- a/lectures/ls-alggroups.html
+++ b/lectures/ls-alggroups.html
@@ -93,7 +93,7 @@
 				<p class="card-text"><b>Chapter 2: Algebraic sets</b><br/>
 				In this section we discuss the the concept of algebraic sets and the Zariski topology defined by them. We will also introduce the concept of the coordinate ring of an algebraic set and we will see how Hilbet's Nullstellensatz translates to these algebraic sets.<br/>
 				<b>Prerequisites:</b> Topology on a space, tensor product of vector spaces.<br/>
-				<b>Exercises:</b> <i>coming later</i></p>
+				<b>Exercises:</b> <a href="https://michaelehrig.github.io/lectures/exercises/ag-sheet2.pdf">Sheet 2</a></p>
 				<p class="card-text"><b>Chapter 3: Affine algebraic varieties</b><br/>
 				In this section we introduce affine algebraic varieties over an algebraically closed field and the maximal spectrum of an algebra as a topological space. We will look at the ring of regular functions of an affine algebraic variety. Finally we will recover an affine algebraic variety from its ring of regular functions making the concept of an affine algebraic variety more universal than the one of an algebraic set.<br/>
 				<b>Prerequisites:</b> ---<br/>
