--- a/lectures/ls-alggroups.html
+++ b/lectures/ls-alggroups.html
@@ -105,7 +105,7 @@
 				<p class="card-text"><b>Chapter 5: Outlook</b><br/>
 				Depending on the progress of the course, this content will be decided on later. There will be no exercises related to this chapter and the content will not be relevant for the examination.<br/>
 				<h4>References:</h4>
-				<p class="card-text">The course will not specifically follow any one reference, but below are a list of possible references that cover the topic, or at least parts of it, in a similar fashion. All of them cover a large part of topics that we will not cover in the course as well.<br/>
+				<p class="card-text">The course will not specifically follow any one reference, but below are a list of possible references that cover the topics, or at least parts of it, in a similar fashion.<br/>
 				<b>Commutative algebra</b>
 				<ul>
 					<li><i>Atiyah, M. F., Macdonald, I. G.</i>: Introduction to Commutative Algebra, Reading, Mass. Addison Wesley 1969</li>
