--- a/lectures/ls-alggroups.html
+++ b/lectures/ls-alggroups.html
@@ -109,8 +109,7 @@
 				<b>Commutative algebra</b>
 				<ul>
 					<li><i>Atiyah, M. F., Macdonald, I. G.</i>: Introduction to Commutative Algebra, Reading, Mass. Addison Wesley 1969</li>
-					<li><i>Eisenbud, D.</i>: Commutative Algebra with a view towards Algebraic
-Geometry, Springer Verlag, Graduate Texts in Mathematics, No. 150, New York 1995</li>
+					<li><i>Eisenbud, D.</i>: Commutative Algebra with a view towards Algebraic Geometry, Springer Verlag, Graduate Texts in Mathematics, No. 150, New York 1995</li>
 				</ul>
 				<b>Algebraic geometry and algebraic groups</b>
 				<ul>
