--- a/lectures/ls-alggroups.html
+++ b/lectures/ls-alggroups.html
@@ -97,7 +97,7 @@
 				<p class="card-text"><b>Chapter 3: Affine algebraic varieties</b><br/>
 				In this section we introduce affine algebraic varieties over an algebraically closed field and the maximal spectrum of an algebra as a topological space. We will look at the ring of regular functions of an affine algebraic variety. Finally we will recover an affine algebraic variety from its ring of regular functions making the concept of an affine algebraic variety more universal than the one of an algebraic set.<br/>
 				<b>Prerequisites:</b> ---<br/>
-				<b>Exercises:</b> <i>coming later</i></p>
+				<b>Exercises:</b> <a href="https://michaelehrig.github.io/lectures/exercises/ag-sheet3.pdf">Sheet 3</a></p>
 				<p class="card-text"><b>Chapter 4: Affine algebraic groups</b><br/>
 				In this section we affine algebraic groups. We will see how affine algebraic groups are related to certain Hopf algebras. We will also see how a variety being a group will affect the various properties of morphisms of varieties as well as the topology. Finally we will prove the linearisation theorem, that every affine algebraic group is in fact isomorphic to a linear algebraic group.<br/>
 				<b>Prerequisites:</b> Groups, index of subgroups<br/>
