--- a/lectures/ls-alggroups.html
+++ b/lectures/ls-alggroups.html
@@ -101,8 +101,8 @@
 				<p class="card-text"><b>Chapter 4: Affine algebraic groups</b><br/>
 				In this section we affine algebraic groups. We will see how affine algebraic groups are related to certain Hopf algebras. We will also see how a variety being a group will affect the various properties of morphisms of varieties as well as the topology. Finally we will prove the linearisation theorem, that every affine algebraic group is in fact isomorphic to a linear algebraic group.<br/>
 				<b>Prerequisites:</b> Groups, index of subgroups<br/>
-				<b>Exercises:</b> <i>coming later</i></p>
-				<p class="card-text"><b>Chapter 5: Outlook</b><br/>
+				<b>Exercises:</b> <a href="https://michaelehrig.github.io/lectures/exercises/ag-sheet4.pdf">Sheet 4</a></p>
+				<p class="card-text"><b>Chapter 5 and beyond: Outlook</b><br/>
 				Depending on the progress of the course, this content will be decided on later. There will be no exercises related to this chapter and the content will not be relevant for the examination.<br/>
 				<h4>References:</h4>
 				<p class="card-text">The course will not specifically follow any one reference, but below are a list of possible references that cover the topics, or at least parts of it, in a similar fashion.<br/>
