--- a/lectures/ls-alggroups.html
+++ b/lectures/ls-alggroups.html
@@ -73,8 +73,10 @@
 				<p>Wednesday <b>9:00 - 12:00</b> in room <b>理学楼A 406-3</b><br/>
 				or by appointment (email: <b>micha.ehrig@outlook.com</b> or <b>6120190037@bit.edu.cn</b>)</p>
 				<p></p>
+				<font color="red">
 				<h4>Exam time and place:</h4>
 				<p>Tuesday, November 19 <b>13:20 - 15:20</b> in room <b>良乡 1-206</b><br/>
+				</font>
 				<p></p>
 				<h4>Examination:</h4>
 				<p>The final mark for the lecture will be comprised of the following parts:
