--- a/lectures/ls-alggroups.html
+++ b/lectures/ls-alggroups.html
@@ -75,7 +75,7 @@
 				<p></p>
 				<font color="red">
 				<h4>Exam time and place:</h4>
-				<p>Tuesday, November 19 <b>13:20 - 15:20</b> in room <b>良乡 1-206</b><br/>
+				<p>Tuesday, November 19, <b>13:20 - 15:20</b> in room <b>良乡 1-206</b><br/>
 				</font>
 				<p></p>
 				<h4>Examination:</h4>
