--- a/publications.html
+++ b/publications.html
@@ -66,17 +66,8 @@
 			<div class="card-header"><h3>Preprints</h3></div>
   			<div class="card-body">
 				<ol>
-					<li><i>Algebraic properties of zig-zag algebras</i>, with <b>D. Tubbenhauer</b>,<br> 
-						<i>to appear in Communications in Algebra</i> <br>
-						(<a href="https://arxiv.org/abs/1807.11173">ArXiv version</a>, <a href="./pdfs/zigzag.pdf">Local version</a>)</li>
-					<li><i>Relative cellular algebras</i>, with <b>D. Tubbenhauer</b>,<br>
-						<i>to appear in Transformation groups</i> <br>
-						(<a href="https://arxiv.org/abs/1710.02851">ArXiv version</a>, <a href="./pdfs/rel-cell.pdf">Local version</a>)</li>
 					<li><i>The periplectic Brauer algebra III: The Deligne category</i>, with <b>K. Coulembier</b>,<br>
 						(<a href="https://arxiv.org/abs/1704.07547">ArXiv version</a>, <a href="./pdfs/PB3.pdf">Local version</a>)</li>
-					<li><i>Singular TQFTs, foams and type D arc algebras</i>, with <b>D. Tubbenhauer</b> and <b>A. Wilbert</b>,<br>
-						<i>to appear in Documenta</i> <br>
-						(<a href="http://arxiv.org/abs/1611.07444">ArXiv version</a>, <a href="./pdfs/foams-typeD.pdf">Local version</a>)</li>
   					<li><i>Generic gl(2)-foams, web and arc algebras</i>, with <b>C. Stroppel</b> and <b>D. Tubbenhauer</b>, <br>
 						(<a href="http://arxiv.org/abs/1601.08010">ArXiv version</a>, <a href="./pdfs/foams-Kh-catO.pdf">Local version</a>)</li>
 				</ol>
@@ -88,6 +79,15 @@
 			<div class="card-header"><h3>Publications</h3></div>
   			<div class="card-body">
 				<ol>
+					<li><i>Relative cellular algebras</i>, with <b>D. Tubbenhauer</b>,<br>
+						in Transformation groups, online publication, 2019 <br>
+						(<a href="https://link.springer.com/article/10.1007/s00031-019-09544-5">Trans. Groups version</a>, <a href="https://arxiv.org/abs/1710.02851">ArXiv version</a>, <a href="./pdfs/rel-cell.pdf">Local version</a>)</li>
+					<li><i>Algebraic properties of zig-zag algebras</i>, with <b>D. Tubbenhauer</b>,<br> 
+						in Communications in Algebra, online publication, 2019 <br>
+						(<a href="https://www.tandfonline.com/doi/full/10.1080/00927872.2019.1632325">Comm. Alg. version</a>, <a href="https://arxiv.org/abs/1807.11173">ArXiv version</a>, <a href="./pdfs/zigzag.pdf">Local version</a>)</li>
+					<li><i>Singular TQFTs, foams and type D arc algebras</i>, with <b>D. Tubbenhauer</b> and <b>A. Wilbert</b>,<br>
+						in Documenta Mathematica, 24, 1585--1655, 2019 <br>
+						(<a href="http://arxiv.org/abs/1611.07444">ArXiv version</a>, <a href="./pdfs/foams-typeD.pdf">Local version</a>)</li>
 					<li><i>Functoriality of colored link homologies</i>, with <b>D. Tubbenhauer</b> and <b>P. Wedrich</b>,<br>
 						in Proceedings of the London Mathematical Society, 117(5), 996--1040, 2018<br>
 						(<a href="https://londmathsoc.onlinelibrary.wiley.com/doi/10.1112/plms.12154">PLMS version</a>, <a href="https://arxiv.org/abs/1703.06691">ArXiv version</a> and <a href="./pdfs/functoriality.pdf">Local version</a>)</li>
