--- a/lectures/ls-algebra2.html
+++ b/lectures/ls-algebra2.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Michael Ehrig, Website">
     <meta name="author" content="Michael Ehrig">
 
-    <title>Graduate class: Algebraic geometry and algebraic groups</title>
+    <title>Graduate class: Algebra 2</title>
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
@@ -63,39 +63,59 @@
 	<p></p>
 	<div class="container">
 		<div class="card border-success">
-			<div class="card-header"><h3>Graduate course: Algebraic geometry and algebraic groups</h3></div>
+			<div class="card-header"><h3>Graduate course: Algebra 2</h3></div>
   			<div class="card-body">
+				<h4>Time and place:</h4>
+				<p>Thursday (Weeks: 4-12) <b>13:20 - 14:55</b> in room <b>2-B505</b><br/>
+				Friday (Weeks: 4-12) <b>13:20 - 14:55</b> in room <b>丹枫园C 425</b></p>
+				<p></p>
+				<h4>Office hours:</h4>
+				<p>Thursday <b>9:00 - 12:00</b> in room <b>理学楼A 406-3</b><br/>
+				or by appointment (email: <b>micha.ehrig@outlook.com</b> or <b>michael.ehrig@bit.edu.cn</b>)</p>
+				<p></p>
+				<font color="red">
+				<h4>Exam time and place:</h4>
+				<p>tba<p/>
+				</font>
+				<p></p>
 				<h4>Examination:</h4>
 				<p>The final mark for the lecture will be comprised of the following parts:
 				<ul>
-					<li>Written report on <b>one</b> exercise from the exercise sheet from Chapter 1: Commutative algebra,  <b>Deadline: week 7</b></li>
-					<li>Written report on <b>one</b> exercise from the exercise sheet from Chapter 2: Algebraic sets,  <b>Deadline: week 9</b></li>
-					<li>Written report on <b>one</b> exercise from the exercise sheet from Chapter 3: Affine algebraic varieties,  <b>Deadline: week 11</b></li>
-					<li>Written report on <b>one</b> exercise from the exercise sheet from Chapter 4: Affine algebraic groups,  <b>Deadline: week 13 (i.e. the week after the course ends)</b></li>
-					<li>Written exam in week 13 after the end of the course</li>
+					<li>Written report on exercise sheet 1,  <b>Deadline: week 3</b></li>
+					<li>Written report on <b>one</b> exercise from the 					<li>Written report on exercise sheet 1,  <b>Deadline: week 5</b></li>
+					<li>Written report on exercise sheet 1,  <b>Deadline: week 7</b></li>
+					<li>Written report on exercise sheet 1,  <b>Deadline: week 9</b></li>
+					<li>Written exam in week 9 after the end of the course</li>
 				</ul>
 				Each exercise report will make up 15% of the final score, while the exam in week 13 will make up 40% of the score. The exercise reports can be handed in on paper or via email.</p>
 				<p></p>	
 				<h4>Outline of the course:</h4>			
 				<p class="card-text">The goal of this course is to understand the basic concepts of affine algebraic geometry and affine algebraic groups. This includes theorems like Hilbert's Nullstellensatz, Noether Normalisation and the Linearisation of affine algebraic groups. The outline of the course will be roughly as follows below. At the end of each chapter outline there is a list of fundamental mathematical terms and objects that will be used in that part and with whose definitions you should be familiar to understand the content of the lectures. In addition there is the pdf-file exercise sheet for each of the first four chapters.</p>
-				<p class="card-text"><b>Chapter 1: Commutative algebra</b><br/>
-				In this section we discuss the basics in the theory of commutative algebras over an arbitrary base field. The main focus here are a number of very famous theorems from the late 19th and early 20th century, namely Noether's Normalisation theorem and Hilbert's Nullstellensatz and the Basis theorem.<br/>
-				<b>Prerequisites:</b> Rings and algebras over fields, ideals (including prime and maximal ideals), zero-divisors and nilpotent elements in a ring, modules for a ring, field extensions and algebraic closure of a field.<br/>
-				<b>Exercises:</b> <a href="https://michaelehrig.github.io/lectures/exercises/ag-sheet1.pdf">Sheet 1</a></p>
-				<p class="card-text"><b>Chapter 2: Algebraic sets</b><br/>
-				In this section we discuss the the concept of algebraic sets and the Zariski topology defined by them. We will also introduce the concept of the coordinate ring of an algebraic set and we will see how Hilbet's Nullstellensatz translates to these algebraic sets.<br/>
-				<b>Prerequisites:</b> Topology on a space, tensor product of vector spaces.<br/>
-				<b>Exercises:</b> <a href="https://michaelehrig.github.io/lectures/exercises/ag-sheet2.pdf">Sheet 2</a></p>
-				<p class="card-text"><b>Chapter 3: Affine algebraic varieties</b><br/>
-				In this section we introduce affine algebraic varieties over an algebraically closed field and the maximal spectrum of an algebra as a topological space. We will look at the ring of regular functions of an affine algebraic variety. Finally we will recover an affine algebraic variety from its ring of regular functions making the concept of an affine algebraic variety more universal than the one of an algebraic set.<br/>
-				<b>Prerequisites:</b> ---<br/>
-				<b>Exercises:</b> <a href="https://michaelehrig.github.io/lectures/exercises/ag-sheet3.pdf">Sheet 3</a></p>
-				<p class="card-text"><b>Chapter 4: Affine algebraic groups</b><br/>
-				In this section we affine algebraic groups. We will see how affine algebraic groups are related to certain Hopf algebras. We will also see how a variety being a group will affect the various properties of morphisms of varieties as well as the topology. Finally we will prove the linearisation theorem, that every affine algebraic group is in fact isomorphic to a linear algebraic group.<br/>
-				<b>Prerequisites:</b> Groups, index of subgroups<br/>
-				<b>Exercises:</b> <a href="https://michaelehrig.github.io/lectures/exercises/ag-sheet4.pdf">Sheet 4</a></p>
-				<p class="card-text"><b>Chapter 5 and beyond: Outlook</b><br/>
-				Depending on the progress of the course, this content will be decided on later. There will be no exercises related to this chapter and the content will not be relevant for the examination.<br/>
+				<p class="card-text"><b>Chapter 1: Rings and modules</b><br/>
+				Content<br/>
+				<b>Prerequisites:</b> </p>
+				<p class="card-text"><b>Chapter 2: Categories, functors and natural transformations</b><br/>
+				Content<br/>
+				<b>Prerequisites:</b> </p>
+				<p class="card-text"><b>Chapter 3: Universal objects</b><br/>
+				Content<br/>
+				<b>Prerequisites:</b> </p>
+				<p class="card-text"><b>Chapter 4: Additive and abelian categories</b><br/>
+				Content<br/>
+				<b>Prerequisites:</b> </p>
+				<p class="card-text"><b>Chapter 5: Exactness, projectivity and injectivity</b><br/>
+				Content<br/>
+				<b>Prerequisites:</b> </p>
+				<p class="card-text"><b>Chapter 6: Category R-Mod</b><br/>
+				Content<br/>
+				<b>Prerequisites:</b> </p>
+				<p class="card-text"><b>Chapter 7: tba</b><br/>
+				Content<br/>
+				<b>Prerequisites:</b> </p>
+				<p class="card-text"><b>Chapter 8: tba</b><br/>
+				Content<br/>
+				<b>Prerequisites:</b> </p>
+
 				<h4>References:</h4>
 				<p class="card-text">The course will not specifically follow any one reference, but below are a list of possible references that cover the topics, or at least parts of it, in a similar fashion.<br/>
 				<b>Commutative algebra</b>
