--- a/teaching.html
+++ b/teaching.html
@@ -63,9 +63,9 @@
 	<p></p>
 	<div class="container">
 		<div class="card border-info">
-			<div class="card-header"><h3>Current teaching (at Beijing Institute of Technology)</h3></div>
+			<div class="card-header"><h3>Teaching in 1st semester of 2020</h3></div>
   			<div class="card-body">
-				<p><b>Algebraic geometry and algebraic groups</b>, <i>Graduate course</i>: <a href="https://michaelehrig.github.io/lectures/ls-alggroups.html">Course informations</a></p>
+				<p><b>Algebra 2</b>, <i>Graduate course</i>: <a href="https://michaelehrig.github.io/lectures/ls-algebra2.html">Course informations</a></p>
   			</div>
 		</div>
 	</div>
@@ -76,7 +76,8 @@
 			<div class="card-header"><h3>Beijing Institute of Technology</h3></div>
   			<div class="card-body">
 				<ul>
-					<li><b>Categorification</b>, <i>Lecture series</i>, ~20+ hours of lecture in 2018<a href="https://michaelehrig.github.io/lectures/ls-categorification.html">.</a></pli>
+					<li><b>Algebraic geometry and algebraic groups</b>, <i>Graduate course</i>, <a href="https://michaelehrig.github.io/lectures/ls-alggroups.html">Course informations</a></li>
+					<li><b>Categorification</b>, <i>Lecture series</i>, ~20+ hours of lecture in 2018<a href="https://michaelehrig.github.io/lectures/ls-categorification.html">.</a></li>
 				</ul>
   			</div>
 		</div>
