--- a/index.html
+++ b/index.html
@@ -76,8 +76,7 @@
 					Beijing Institute of Technology<br/>
 					Liangxiang campus, Fangshan District <br/>
 					Beijing, P.R. China </p>
-					<p class="card-text">email: <b>micha.ehrig@outlook.com</b></p>
-
+					<p class="card-text">email: <b>micha.ehrig@outlook.com</b> or <b>michael.ehrig@bit.edu.cn</b></p>
 				</div>
 			</div>
 		</div>
