--- a/lectures/ls-algebra2.html
+++ b/lectures/ls-algebra2.html
@@ -81,10 +81,10 @@
 				<h4>Examination:</h4>
 				<p>The final mark for the lecture will be comprised of the following parts:
 				<ul>
-					<li>Written report on exercise sheet 1,  <b>Deadline: week 3</b></li>
-					<li>Written report on <b>one</b> exercise from the 					<li>Written report on exercise sheet 1,  <b>Deadline: week 5</b></li>
-					<li>Written report on exercise sheet 1,  <b>Deadline: week 7</b></li>
-					<li>Written report on exercise sheet 1,  <b>Deadline: week 9</b></li>
+					<li>Written report on exercise sheet 1,  <b>Deadline: Friday on week 3</b></li>
+					<li>Written report on exercise sheet 1,  <b>Deadline: Friday on week 5</b></li>
+					<li>Written report on exercise sheet 1,  <b>Deadline: Friday on week 7</b></li>
+					<li>Written report on exercise sheet 1,  <b>Deadline: Friday on week 9</b></li>
 					<li>Written exam in week 9 after the end of the course</li>
 				</ul>
 				Each exercise report will make up 15% of the final score, while the exam in week 13 will make up 40% of the score. The exercise reports can be handed in on paper or via email.</p>
