--- a/lectures/ls-algebra2.html
+++ b/lectures/ls-algebra2.html
@@ -63,7 +63,7 @@
 	<p></p>
 	<div class="container">
 		<div class="card border-success">
-			<div class="card-header"><h3>Graduate course: Algebra 2 (代数学（模块2）)</h3></div>
+			<div class="card-header"><h3>Graduate course: Algebra 2 - 代数学（模块2）</h3></div>
   			<div class="card-body">
 				<h4>Time and place:</h4>
 				<p>Thursday (Weeks: 1-8) <b>13:20 - 14:55</b> in room <b>良乡2-A406</b><br/>
