--- a/lectures/ls-algebra2.html
+++ b/lectures/ls-algebra2.html
@@ -81,16 +81,16 @@
 				<h4>Examination:</h4>
 				<p>The final mark for the lecture will be comprised of the following parts:
 				<ul>
-					<li>Written report on exercise sheet 1,  <b>Deadline: Friday on week 3</b></li>
-					<li>Written report on exercise sheet 2,  <b>Deadline: Friday on week 5</b></li>
-					<li>Written report on exercise sheet 3,  <b>Deadline: Friday on week 7</b></li>
-					<li>Written report on exercise sheet 4,  <b>Deadline: Friday on week 9</b></li>
+					<li>Written report on <a href="https://michaelehrig.github.io/lectures/exercises/alg2-sheet1.pdf">exercise sheet 1</a>,  <b>Deadline: Friday on week 3</b></li>
+					<li>Written report on <a href="https://michaelehrig.github.io/lectures/exercises/alg2-sheet2.pdf">exercise sheet 2</a>,  <b>Deadline: Friday on week 5</b></li>
+					<li>Written report on <a href="https://michaelehrig.github.io/lectures/exercises/alg2-sheet3.pdf">exercise sheet 3</a>,  <b>Deadline: Friday on week 7</b></li>
+					<li>Written report on <a href="https://michaelehrig.github.io/lectures/exercises/alg2-sheet4.pdf">exercise sheet 4</a>,  <b>Deadline: Friday on week 9</b></li>
 					<li>Written exam in week 9 after the end of the course</li>
 				</ul>
 				Each exercise report will make up 15% of the final score, while the exam in week 13 will make up 40% of the score. The exercise reports can be handed in on paper or via email.</p>
 				<p></p>	
-				<h4>Outline of the course:</h4>			
-				<p class="card-text">The goal of this course is to understand the basic concepts of affine algebraic geometry and affine algebraic groups. This includes theorems like Hilbert's Nullstellensatz, Noether Normalisation and the Linearisation of affine algebraic groups. The outline of the course will be roughly as follows below. At the end of each chapter outline there is a list of fundamental mathematical terms and objects that will be used in that part and with whose definitions you should be familiar to understand the content of the lectures. In addition there is the pdf-file exercise sheet for each of the first four chapters.</p>
+				<h4>Outline of the course:</h4>
+				<p class="card-text">Goal and content.</p>
 				<p class="card-text"><b>Chapter 1: Rings and modules</b><br/>
 				Content<br/>
 				<b>Prerequisites:</b> </p>
@@ -118,15 +118,9 @@
 
 				<h4>References:</h4>
 				<p class="card-text">The course will not specifically follow any one reference, but below are a list of possible references that cover the topics, or at least parts of it, in a similar fashion.<br/>
-				<b>Commutative algebra</b>
 				<ul>
-					<li><i>Atiyah, M. F., Macdonald, I. G.</i>: Introduction to Commutative Algebra, Reading, Mass. Addison Wesley 1969</li>
-					<li><i>Eisenbud, D.</i>: Commutative Algebra with a view towards Algebraic Geometry, Springer Verlag, Graduate Texts in Mathematics, No. 150, New York 1995</li>
-				</ul>
-				<b>Algebraic geometry and algebraic groups</b>
-				<ul>
-					<li><i>Borel, A.</i>: Linear algebraic groups. Second edition. Graduate Texts in Mathematics, No. 126. Springer-Verlag, New York, 1991.</li>
-					<li><i>Humphreys, J. E.</i>: Linear algebraic groups. Graduate Texts in Mathematics, No. 21. Springer-Verlag, New York-Heidelberg, 1975.</li>
+					<li><i>Hungerford</i>: here</li>
+					<li><i>Lang</i>: here</li>
 				</ul>
 				</p>
   			</div>
