--- a/lectures/ls-algebra2.html
+++ b/lectures/ls-algebra2.html
@@ -91,9 +91,9 @@
 				<p></p>	
 				<h4>Outline of the course:</h4>
 				<p class="card-text">Goal and content.</p>
+				<b>Prerequisites:</b> The course is fairly self-contained and the only real prerequisite is the knowledge of what rings and ideals are and some background knowledge on abelian groups.</p>
 				<p class="card-text"><b>Chapter 1: Rings and modules</b><br/>
 				Content<br/>
-				<b>Prerequisites:</b> </p>
 				<p class="card-text"><b>Chapter 2: Categories, functors and natural transformations</b><br/>
 				Content<br/>
 				<b>Prerequisites:</b> </p>
