--- a/lectures/ls-algebra2.html
+++ b/lectures/ls-algebra2.html
@@ -87,7 +87,7 @@
 					<li>Written report on <a href="https://michaelehrig.github.io/lectures/exercises/alg2-sheet4.pdf">exercise sheet 4</a>,  <b>Deadline: Friday on week 9</b></li>
 					<li>Written exam in week 9 after the end of the course</li>
 				</ul>
-				Each exercise report will make up 15% of the final score, while the exam in week 13 will make up 40% of the score. The exercise reports can be handed in on paper or via email.</p>
+				Each exercise report will make up 15% of the final score, while the exam will make up 40% of the score. The exercise reports can be handed in on paper or via email.</p>
 				<p></p>	
 				<h4>Outline of the course:</h4>
 				<p class="card-text">Goal and content.</p>
