--- a/lectures/ls-algebra2.html
+++ b/lectures/ls-algebra2.html
@@ -66,56 +66,8 @@
 			<div class="card-header"><h3>Graduate course: Algebra 2 - 代数学（模块2）</h3></div>
   			<div class="card-body">
 				<h4>Time and place:</h4>
-				<p>Thursday (Weeks: 1-8) <b>13:20 - 14:55</b> in room <b>良乡2-A406</b><br/>
-				Friday (Weeks: 1-8) <b>13:20 - 14:55</b> in room <b>良乡1-403</b></p>
+				<p>The course will be taught as an online course in the BIT online teaching system.</p>
 				<p></p>
-				<h4>Office hours:</h4>
-				<p>Thursday <b>9:00 - 12:00</b> in room <b>理学楼A 406-3</b><br/>
-				or by appointment (email: <b>micha.ehrig@outlook.com</b> or <b>michael.ehrig@bit.edu.cn</b>)</p>
-				<p></p>
-				<font color="red">
-				<h4>Exam time and place:</h4>
-				<p>tba<p/>
-				</font>
-				<p></p>
-				<h4>Examination:</h4>
-				<p>The final mark for the lecture will be comprised of the following parts:
-				<ul>
-					<li>Written report on <a href="https://michaelehrig.github.io/lectures/exercises/alg2-sheet1.pdf">exercise sheet 1</a>,  <b>Deadline: Friday on week 3</b></li>
-					<li>Written report on <a href="https://michaelehrig.github.io/lectures/exercises/alg2-sheet2.pdf">exercise sheet 2</a>,  <b>Deadline: Friday on week 5</b></li>
-					<li>Written report on <a href="https://michaelehrig.github.io/lectures/exercises/alg2-sheet3.pdf">exercise sheet 3</a>,  <b>Deadline: Friday on week 7</b></li>
-					<li>Written report on <a href="https://michaelehrig.github.io/lectures/exercises/alg2-sheet4.pdf">exercise sheet 4</a>,  <b>Deadline: Friday on week 9</b></li>
-					<li>Written exam in week 9 after the end of the course</li>
-				</ul>
-				Each exercise report will make up 15% of the final score, while the exam will make up 40% of the score. The exercise reports can be handed in on paper or via email.</p>
-				<p></p>	
-				<h4>Outline of the course:</h4>
-				<p class="card-text">Goal and content.</p>
-				<b>Prerequisites:</b> The course is fairly self-contained and the only real prerequisite is the knowledge of what rings and ideals are and some background knowledge on abelian groups.</p>
-				<p class="card-text"><b>Chapter 1: Rings and modules</b><br/>
-				Content<br/>
-				<p class="card-text"><b>Chapter 2: Categories, functors and natural transformations</b><br/>
-				Content<br/>
-				<p class="card-text"><b>Chapter 3: Universal objects</b><br/>
-				Content<br/>
-				<p class="card-text"><b>Chapter 4: Additive and abelian categories</b><br/>
-				Content<br/>
-				<p class="card-text"><b>Chapter 5: Exactness, projectivity and injectivity</b><br/>
-				Content<br/>
-				<p class="card-text"><b>Chapter 6: Category R-Mod</b><br/>
-				Content<br/>
-				<p class="card-text"><b>Chapter 7: tba</b><br/>
-				Content<br/>
-				<p class="card-text"><b>Chapter 8: tba</b><br/>
-				Content<br/>
-
-				<h4>References:</h4>
-				<p class="card-text">The course will not specifically follow any one reference, but below are a list of possible references that cover the topics, or at least parts of it, in a similar fashion.<br/>
-				<ul>
-					<li><i>Hungerford</i>: here</li>
-					<li><i>Lang</i>: here</li>
-				</ul>
-				</p>
   			</div>
 		</div>
 	</div>
