--- a/lectures/ls-topology2.html
+++ b/lectures/ls-topology2.html
@@ -63,7 +63,7 @@
 	<p></p>
 	<div class="container">
 		<div class="card border-success">
-			<div class="card-header"><h3>Graduate course: Topology 2</h3></div>
+			<div class="card-header"><h3>Graduate course: Topology 2 - 拓扑学 （模块2）</h3></div>
   			<div class="card-body">
 				<h4>Examination:</h4>
 				<p>The final mark for the lecture will be comprised of the following parts:
