--- a/teaching.html
+++ b/teaching.html
@@ -63,7 +63,7 @@
 	<p></p>
 	<div class="container">
 		<div class="card border-info">
-			<div class="card-header"><h3>Teaching in 1st semester of 2020</h3></div>
+			<div class="card-header"><h3>Teaching in 2nd semester of 2020</h3></div>
   			<div class="card-body">
 				<p><b>Topology 2</b>, <i>Graduate course</i>: <a href="https://michaelehrig.github.io/lectures/ls-topology2.html">Course informations</a></p>
   			</div>
