--- a/lectures/ls-topology2.html
+++ b/lectures/ls-topology2.html
@@ -63,19 +63,8 @@
 	<p></p>
 	<div class="container">
 		<div class="card border-success">
-			<div class="card-header"><h3>Graduate course: Topology 2 - 拓扑学 （模块2）</h3></div>
+			<div class="card-header"><h3>Topology 2 - 拓扑学 （模块2）</h3></div>
   			<div class="card-body">
-				<h4>Examination:</h4>
-				<p>The final mark for the lecture will be comprised of the following parts:
-				<ul>
-					<li>Written report on exercise sheet 1: Basics on topology and the fundamental group,  <b>Deadline: week 8</b></li>
-					<li>Written report on exercise sheet 2: Applications of the fundamental group,  <b>Deadline: week 10</b></li>
-					<li>Written report on exercise sheet 3: Covering spaces,  <b>Deadline: week 12</b></li>
-					<li>Written report on exercise sheet 4: Homology groups,  <b>Deadline: week 14 (i.e. the week after the course ends)</b></li>
-					<li>Written exam after the end of the course</li>
-				</ul>
-				Each exercise report will make up 15% of the final score, while the exam will make up 40% of the score. The exercise reports can be handed in on paper or via email (in English).</p>
-				<p></p>	
 				<h4>Outline of the course:</h4>			
 				<p class="card-text">The goal of the course is the introduction and understanding of a number of basic concepts from algebraic topology, namely the fundamental group of a topological space, homology groups, and finally cohomology groups.</p>
 				<p class="card-text"><b>Chapter 1: Fundamental group</b><br/>
@@ -93,6 +82,18 @@
 					<li><a href=" ">Sheet 2</a> (available in week 9)</li>
 					<li><a href=" ">Sheet 3</a> (available in week 11)</li>
 					<li><a href=" ">Sheet 4</a> (available in week 13)</li>
+				</ul>
+				<h4>Examination:</h4>
+				<p>The final mark for the lecture will be comprised of the following parts:
+				<ul>
+					<li>Written report on exercise sheet 1: Basics on topology and the fundamental group,  <b>Deadline: week 8</b></li>
+					<li>Written report on exercise sheet 2: Applications of the fundamental group,  <b>Deadline: week 10</b></li>
+					<li>Written report on exercise sheet 3: Covering spaces,  <b>Deadline: week 12</b></li>
+					<li>Written report on exercise sheet 4: Homology groups,  <b>Deadline: week 14 (i.e. the week after the course ends)</b></li>
+					<li>Written exam after the end of the course</li>
+				</ul>
+				Each exercise report will make up 15% of the final score, while the exam will make up 40% of the score. The exercise reports can be handed in on paper or via email (in English).</p>
+				<p></p>	
 				<h4>References:</h4>
 				<p class="card-text">The course will mostly use the following reference.<br/>
 				<ul>
