--- a/lectures/ls-topology2.html
+++ b/lectures/ls-topology2.html
@@ -65,6 +65,11 @@
 		<div class="card border-success">
 			<div class="card-header"><h3>Topology 2 - 拓扑学 （模块2）</h3></div>
   			<div class="card-body">
+				<h4>Time and place:</h4>
+				<p><b>Thursday:</b> 18:30 - 20:05 in 理学 C207</p>			
+				<p><b>Friday:</b> 13:20 - 14:55 in 理学 C207</p>			
+				<br/>
+				<p>First lecture will be on October 29th.</p>
 				<h4>Outline of the course:</h4>			
 				<p class="card-text">The goal of the course is the introduction and understanding of a number of basic concepts from algebraic topology, namely the fundamental group of a topological space, homology groups, and finally cohomology groups.</p>
 				<p class="card-text"><b>Chapter 1: Fundamental group</b><br/>
@@ -76,23 +81,21 @@
 				<p class="card-text"><b>Chapter 3: Cohomology</b><br/>
 				In this section we give a short overview of cohomology and how it is related to homology. Since cohomology is a mostly algebraic construction we will not spend a lot of time on this topic in comparison with the first two chapters.<br/>
 				<h4>Exercises:</h4>
-				There will be four exercise sheets in total, the first three will cover topics related to the fundamental group, while the last one will deal with homology.<br/>
+				There will be three exercise sheets in total, the first two will cover topics related to the fundamental group, while the third one will deal with homology.<br/>
 				<ul>
-					<li><a href=" ">Sheet 1</a> (available in week 7)</li>
-					<li><a href=" ">Sheet 2</a> (available in week 9)</li>
-					<li><a href=" ">Sheet 3</a> (available in week 11)</li>
-					<li><a href=" ">Sheet 4</a> (available in week 13)</li>
+					<li><a href=" ">Sheet 1</a> (available on 2020-11-12)</li>
+					<li><a href=" ">Sheet 2</a> (available in 2020-11-26)</li>
+					<li><a href=" ">Sheet 3</a> (available in 2020-12-10)</li>
 				</ul>
 				<h4>Examination:</h4>
 				<p>The final mark for the lecture will be comprised of the following parts:
 				<ul>
-					<li>Written report on exercise sheet 1: Basics on topology and the fundamental group,  <b>Deadline: week 8</b></li>
-					<li>Written report on exercise sheet 2: Applications of the fundamental group,  <b>Deadline: week 10</b></li>
-					<li>Written report on exercise sheet 3: Covering spaces,  <b>Deadline: week 12</b></li>
-					<li>Written report on exercise sheet 4: Homology groups,  <b>Deadline: week 14 (i.e. the week after the course ends)</b></li>
+					<li>Written report on exercise sheet 1: Basics on topology and the fundamental group,  <b>Deadline: 2020-11-20</b></li>
+					<li>Written report on exercise sheet 2: Applications of the fundamental group,  <b>Deadline: 2020-12-04</b></li>
+					<li>Written report on exercise sheet 4: Homology groups,  <b>Deadline: 2020-12-18</b></li>
 					<li>Written exam after the end of the course</li>
 				</ul>
-				Each exercise report will make up 15% of the final score, while the exam will make up 40% of the score. The exercise reports can be handed in on paper or via email (in English).</p>
+				Each exercise report will make up 20% of the final score, while the exam will make up 40% of the score. The exercise reports can be handed in on paper or via email (in English).</p>
 				<p></p>	
 				<h4>References:</h4>
 				<p class="card-text">The course will mostly use the following reference.<br/>
