--- a/lectures/ls-topology2.html
+++ b/lectures/ls-topology2.html
@@ -89,9 +89,9 @@
 				<h4>Examination:</h4>
 				<p>The final mark for the lecture will be comprised of the following parts:
 				<ul>
-					<li>Written report on exercise sheet 1: Basics on topology and the fundamental group,  <b>Deadline: 2020-11-20</b></li>
-					<li>Written report on exercise sheet 2: Applications of the fundamental group,  <b>Deadline: 2020-12-04</b></li>
-					<li>Written report on exercise sheet 4: Homology groups,  <b>Deadline: 2020-12-18</b></li>
+					<li>Written report on sheet 1: Basics on topology and the fundamental group,  <b>Deadline: 2020-11-20</b></li>
+					<li>Written report on sheet 2: Applications of the fundamental group,  <b>Deadline: 2020-12-04</b></li>
+					<li>Written report on sheet 3: Homology groups,  <b>Deadline: 2020-12-18</b></li>
 					<li>Written exam after the end of the course</li>
 				</ul>
 				Each exercise report will make up 20% of the final score, while the exam will make up 40% of the score. The exercise reports can be handed in on paper or via email (in English).</p>
